[FIX] web: wkhtmltopdf overlapping table lines
Before this commit we had an issue when a product's description took
more than one page. In this case, the following `<tr>` was overlapping.

By removing this line we remove an old fix that seems not working
anymore... It looks like it was needed when a customer wanted to repeat
the table header on each page. This use case is supported by Odoo as
we suggest it as a customization in the code, see here:
"<!-- In case we want to repeat the header, remove "display: table-row-group" -->"
This feature is still working without this fix except when a line
overflows onto another page but the removed fix doesn't help anyway...

There is another line that refers to this fix for accounting reports
but we prefer to keep this commit minimal and clean it in master.

Note that this bug is also present in 15 but as this issue is quite old
and tricky we prefer to not fix it this until we have other complains.
Feel free to backport this commit if needed.

Steps to reproduce:
- Go to Sales
- Create a new quotation
- Add a product with a very long description that takes at least a whole page.
- Add anoter product.
- Print it as a .pdf.
=> Product descriptions overlaps on page 3.

opw-3411031

closes odoo/odoo#145388

--- a/addons/web/static/src/webclient/actions/reports/report.scss
+++ b/addons/web/static/src/webclient/actions/reports/report.scss
@@ -60,13 +60,11 @@ span.o_force_ltr {
     border-top: 1px solid black !important;
 }
 
-/* See https://github.com/wkhtmltopdf/wkhtmltopdf/issues/1524 */
 .table-sm {
     > thead > tr > th {
         border-bottom: none !important;
     }
     > tbody > tr {
-        page-break-inside: avoid !important;
         border-top: none !important;
     }
 }
